vehicle/tests/golden/error/typing/incorrectTensorLength/incorrectTensorLength.vcl
tensor : Tensor Real [2]
tensor = [1]
